# some-common-statistical-methods

./: README.md  common_imports.py  pyproject.toml  requirements.txt
docs/: concise-docu.md  detailled-docu.md  index.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/statanalysis/: modules.rst  statanalysis.conf_inte_md.rst  statanalysis.hyp_testi_md.rst  statanalysis.hyp_vali_md.rst  statanalysis.mdl_esti_md.rst  statanalysis.rst  statanalysis.utils_md.rst
my_stats/: __init__.py
my_stats/conf_inte_md/: ci_estimators.py  confidence_interval.py
my_stats/hyp_testi_md/: hp_estimators.py  hypothesis_testing.py
my_stats/hyp_vali_md/: constraints.py  hypothesis_validator.py
my_stats/mdl_esti_md/: bb.py  hp_estimators_regression.py  log_reg.py  log_reg_example.py  model_estimator.py  models.py  prediction_metrics.py  prediction_results.py
my_stats/utils_md/: compute_ppf_and_p_value.py  constants.py  estimate_std.py  preprocessing.py  refactoring.py
ntbks/: cartwheel.ipynb  dir.txt
scripts/: run-build-docu.sh  run-export-deps.sh  run-format.sh  run-pydeps.sh
statanalysis/conf_inte_md/: ci_estimators.py  confidence_interval.py
statanalysis/hyp_testi_md/: hp_estimators.py  hypothesis_testing.py
statanalysis/hyp_vali_md/: __init__.py  constraints.py  hypothesis_validator.py
statanalysis/mdl_esti_md/: hp_estimators_regression.py  log_reg_example.py  model_estimator.py  prediction_metrics.py  prediction_results.py
statanalysis/utils_md/: __init__.py  constraints.py  preprocessing.py
tests/: _test_des.py  regression_data.txt  test_conf_inf_md.py  test_hyp_esti_md.py  test_hyp_vali_md.py  test_mdl_esti_md.py  test_utils_md.py
