[tool.poetry]
name = "stat-analysis"
version = "1.0.0"
description = "A Python library providing hands on implementation of a collection of common statistical methods for data analysis."
authors = ["Hermann Agossou <agossouhermann7@gmail.com>"]
maintainers = [
    "Hermann Agossou <agossouhermann7@gmail.com>"
]
homepage = "https://github.com/Hermann-web/some-common-statistical-methods"
repository = "https://github.com/Hermann-web/some-common-statistical-methods"
documentation = "https://statanalysis.readthedocs.io"
license = "Apache License"
readme = "README.md"
packages = [{include = "statanalysis"}]
keywords = ["statistics", "data analysis", "confidence intervals", "hypothesis testing", "model estimation", "regression", "statistical learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.8"
scipy = "^1.8.0"
numpy = "^1.20.0"
statsmodels = "^0.14.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"
isort = "^5.10.0"
pydeps = "^1.12.20"

[tool.poetry.group.buildthedocs.dependencies]
sphinx = "^7.1.0"
sphinx-rtd-theme = "^2.0.0"


[tool.poetry.group.visu.dependencies]
matplotlib = "^3.0.0"
seaborn = "^0.13.0"


[tool.poetry.group.pandas.dependencies]
pandas = "^2.0.0"


[tool.poetry.group.sklearn.dependencies]
scikit-learn = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
